# quadrotor_motion_with_platform_control

package/: CMakeLists.txt  README.md  package.xml  quadrotor_motion_with_platform_control.xml
package/launch/: quadrotor_motion_with_platform_control.launch
package/src/include/: behavior_move_at_speed_with_platform_control.h  behavior_move_vertical_with_platform_control.h  behavior_rotate_with_platform_control.h
package/src/source/: behavior_move_at_speed_with_platform_control.cpp  behavior_move_vertical_with_platform_control.cpp  behavior_rotate_with_platform_control.cpp
