<?xml version="1.0"?>
<package>
  <name>quadrotor_motion_with_platform_control</name>
  <version>1.0.0</version>
  <description>Quadrotor motion with platform control system of behaviors</description>

  <maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo Perales</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behavior_execution_manager</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aerostack_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behavior_execution_manager</run_depend>
  <run_depend>behavior_execution_manager_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>aerostack_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/quadrotor_motion_with_platform_control.xml" />
  </export>
</package>
